[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coda-mcp"
version = "0.1.0"
description = "MCP server for the Coda.io API — bulk-safe reads and writes for Claude and other MCP clients."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]
keywords = ["coda", "mcp", "model-context-protocol", "claude", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/btdestais/coda-mcp"
Repository = "https://github.com/btdestais/coda-mcp"
Issues = "https://github.com/btdestais/coda-mcp"

[project.scripts]
coda-mcp = "coda_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["coda_mcp.py"]
